Fix issue with default itest profile no activating